# kernel_module_lesson

./: .gitignore  README.md  fifo.c  list.h  string_buffer.h
src/: Makefile  fifo.c  string_buffer.h
test/: CMakeLists.txt  read_write_to_device.cpp  test.cpp
